# poisontr33s

./: .env.template  .gitignore  CONTRIBUTOR_AUTOMATION.md  DYNAMIC_MCP_README.md  META_AUTOMATA_README.md  README.md  demo.py  main.py  main_simple.py  pyproject.toml  requirements.txt
.github/: .copilot-session.md  copilot-instructions.md  copilot-session.md  tektonikk.md
.github/ISSUE_TEMPLATE/: repository-automation-implementation.md
.github/workflows/: add-contributors.yml  dynamic-mcp-automation.yml  post-merge-validation.yml  repo-setup.yml
assets/: .gitkeep  README.md
config/: contributor-config.json  system_config.yaml
docs/: .gitkeep  README.md  contributor-automation.md  migration_guide.md  post-merge-validation-issue-template.md  post-merge-validation.md  validation-implementation-summary.md
docs/issues/: repository-automation-gap.md
examples/: batch-contributors.json  usage_examples.sh
scripts/: .gitkeep  README.md  add_contributors.py  add_contributors.sh  cleanup-branches.sh  post-merge-validation.sh  setup-repo-structure.sh
src/: .gitkeep  README.md  __init__.py
src/ai_integrations/: orchestrator.py
src/core/: config_manager.py  meta_automata.py
src/dynamic_mcp/: __init__.py  main.py
src/dynamic_mcp/automation/: github_handler.py  trigger_processor.py
src/dynamic_mcp/core/: orchestrator.py  router.py  schemas.py
src/dynamic_mcp/rag/: generator.py  retriever.py
src/vulkan/: renderer.py
src/web/: server.py
tests/: .gitkeep  README.md  test_contributor_automation.py  test_dynamic_mcp.py  validate-repo-structure.sh
(+5 files in other folders)
